--- a/webui_lite/index.html
+++ b/webui_lite/index.html
@@ -1439,6 +1439,19 @@
                     </div>
                 </div>
             </div>
+
+            <div class="card">
+                <div class="card-header">
+                    <span>Interface Options</span>
+                </div>
+                <div style="padding: 16px;">
+                    <div class="form-group checkbox-group">
+                        <input type="checkbox" id="enable_minimal_mode" ${isMinimalModeEnabled ? 'checked' : ''}>
+                        <label class="form-label" for="enable_minimal_mode" style="margin: 0;">Enable Minimal Mode</label>
+                        <p class="form-help" style="margin-left: 36px; margin-top: 8px;">Switch to a lightweight text-only interface. Disables charts, animations, and SSE streaming to reduce CPU/memory usage on low-power devices. This preference is saved in your browser.</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Debug Page -->
@@ -1974,7 +1987,7 @@
             return false;
         }
 
-        function handleMinimalModeSettingsToggle() {
+        function handleMinimalModeStatusToggle() {
             const checkbox = document.getElementById('enable_minimal_mode');
             if (checkbox) {
                 checkbox.onchange = () => {
@@ -2138,6 +2151,7 @@
                 initChart();
                 initFullPrintChart();
                 initJamCharts();
+                handleMinimalModeStatusToggle();
             } else if (pageName === 'settings') {
                 loadSettings();
             } else if (pageName === 'logs') {
@@ -3104,12 +3118,6 @@
                         <p class="form-help" style="margin-left: 36px; margin-top: 8px;">Show the Debug page in the navigation menu. Useful for troubleshooting.</p>
                     </div>
 
-                    <div class="form-group checkbox-group">
-                        <input type="checkbox" id="enable_minimal_mode" ${isMinimalModeEnabled() ? 'checked' : ''}>
-                        <label class="form-label" for="enable_minimal_mode" style="margin: 0;">Enable Minimal Mode</label>
-                        <p class="form-help" style="margin-left: 36px; margin-top: 8px;">Switch to a lightweight text-only interface. Disables charts, animations, and SSE streaming to reduce CPU/memory usage on low-power devices. This preference is saved in your browser.</p>
-                    </div>
-
                     <div class="btn-group">
                         <button type="button" class="btn" onclick="saveSettings()">Save Settings</button>
                         <button type="button" class="btn btn-secondary" onclick="testPause()">Send Pause Command</button>
@@ -3118,7 +3126,6 @@
                 `;
 
                 attachSettingsChangeHandlers();
-                handleMinimalModeSettingsToggle();  // Set up minimal mode toggle
                 setSettingsBaseline(buildSettingsPayload());
                 loadSavedPrinters();  // Restore discovered printers from localStorage
             } catch (error) {
