--- a/webui_lite/index.html
+++ b/webui_lite/index.html
@@ -1021,7 +1021,7 @@
         }
 
         .modal-card {
-            background: var(--bg-card);
+            background: var(--bg-secondary);
             border: 1px solid var(--border-color);
             border-radius: 16px;
             padding: 24px;
